# probe-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: index.html
docs/assets/: index-DFg7diqG.css  index-QhTbt0tj.js
docs/data/: avatar-demo.json  benchmark.json  eval-results.json  safety.json
results/: local_benchmark.json
scenarios/: generated.json  library.json  schema.md
scripts/: benchmark.py  demo_retrieval_fix.py  evaluate.py  generate_scenarios.py  ingest.py  safety_report.py  sanity_check.py  smoke_test_agent.py  smoke_test_rag.py
src/: config.py
src/agent/: graph.py  memory.py  tools.py
src/benchmark/: comparison.py  inference.py  local_backend.py
src/connectors/: __init__.py  adapters.py  base.py  example_connector.py  tmdb.py
src/database/: connection.py  models.py  vector_store.py
src/evaluation/: runner.py
src/evaluation/metrics/: faithfulness.py  grounding.py  hallucination.py  latency.py  retrieval.py  task_success.py  tool_selection.py
src/generator/: prompts.py  scenario_generator.py
src/ingestion/: chunker.py  embedder.py  loader.py
src/rag/: generator.py  pipeline.py  retriever.py
src/safety/: guardrails.py  injection.py  redteam.py
